@@ -2122,7 +2122,7 @@
   ;; (should (time-equal-p (days-to-time 999.0) '(1317 2688 0 0)))
   )
 
-(ert-deftest decoded-time-getters ()
+(ert-deftest decoded-time-accessors ()
   (let ((time '(second minute hour day month year weekday dst zone)))
     (should-equal (decoded-time-second time) 'second)
     (should-equal (decoded-time-minute time) 'minute)
@@ -2132,7 +2132,25 @@
     (should-equal (decoded-time-year time) 'year)
     (should-equal (decoded-time-weekday time) 'weekday)
     (should-equal (decoded-time-dst time) 'dst)
-    (should-equal (decoded-time-zone time) 'zone)))
+    (should-equal (decoded-time-zone time) 'zone)
+    (setf (decoded-time-second time) 'SECOND)
+    (setf (decoded-time-minute time) 'MINUTE)
+    (setf (decoded-time-hour time) 'HOUR)
+    (setf (decoded-time-day time) 'DAY)
+    (setf (decoded-time-month time) 'MONTH)
+    (setf (decoded-time-year time) 'YEAR)
+    (setf (decoded-time-weekday time) 'WEEKDAY)
+    (setf (decoded-time-dst time) 'DST)
+    (setf (decoded-time-zone time) 'ZONE)
+    (should-equal (decoded-time-second time) 'SECOND)
+    (should-equal (decoded-time-minute time) 'MINUTE)
+    (should-equal (decoded-time-hour time) 'HOUR)
+    (should-equal (decoded-time-day time) 'DAY)
+    (should-equal (decoded-time-month time) 'MONTH)
+    (should-equal (decoded-time-year time) 'YEAR)
+    (should-equal (decoded-time-weekday time) 'WEEKDAY)
+    (should-equal (decoded-time-dst time) 'DST)
+    (should-equal (decoded-time-zone time) 'ZONE)))
 
 (ert-deftest decoded-time-period ()
   (should-equal 0 (decoded-time-period '()))
